# cdc-out-examples

./: README.md
python/: Dockerfile  README.md  main.py  pyproject.toml
python/cdc/: connection_builder.py  gather.py  observe_query.py  observe_types.py  record.py  replication.py  single_table.py  table_definition.py
